# hyperlane-monorepo

./: .gitignore  CLAUDE.md  RESTART_GUIDE.md  Staging-guide.md  TESTNET_GUIDE.md  agent-config-testnet.json  agent-config.json  diagram.md  enroll-routers-simple.ts  enroll-solana-simple.ts  mint-tokens.ts  solana-business-bridge.md  sonar-project.properties  test-bridge-auto.ts  test-evm-to-solana.ts
.github/actions/: sonarqube.yaml
deployment_scripts/: README.md  deploy_rwa_token.sh
external_contracts/deployment-asset-script/: .env.example  .gitignore  Makefile  README.md  hardhat.config.ts  package-lock.json  package.json
external_contracts/deployment-asset-script/contracts/: ERC20.sol
external_contracts/deployment-asset-script/scripts/: deploy.ts  deploySAC.mjs  setAdmin.mjs  transferOwnership.ts
external_contracts/evm/: .env.example  .gitignore  Makefile  README.md  TokenBridge_API_Reference.md  TokenBridge_Test_Coverage_Report.md  env.example  fix-tokenbridge-test.js  hardhat.config.ts  package-lock.json  package.json  update-tests.js
external_contracts/evm/.openzeppelin/: unknown-7336.json
external_contracts/evm/contracts/: BridgeStorage.sol  BridgeSystemOperations.sol  BridgeUserOperations.sol  ERC1967Proxy.sol  TokenBridge.sol  TransactionIdTracker.sol
external_contracts/evm/contracts/interfaces/: IBridge.sol  IERC20Burnable.sol  IERC20Mintable.sol  ITransactionIdTracker.sol
external_contracts/evm/contracts/mocks/: MockAttacker.sol  MockBurnableToken.sol  MockERC20.sol  MockMintableToken.sol
external_contracts/evm/docs/: DEPLOYMENT.md
external_contracts/evm/scripts/: burnToken.ts  deploy.ts  find-error-signature.ts  force-import-proxy.ts  grantAdmin.ts  lockToken.ts  mintToken.ts  unlockToken.ts  upgrade.ts
external_contracts/evm/test/: AccessControl.test.ts  ArithmeticEdgeCases.test.ts  CoreBridgeFunctionality.test.ts  MultiUserScenarios.test.ts  SecurityTests.test.ts  TransactionIdTracker.test.ts
external_contracts/stellar/: .gitignore  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  TokenBridge_API_Reference.md  TokenBridge_Test_Coverage_Report.md
external_contracts/stellar/contracts/token_bridge/: Cargo.toml
external_contracts/stellar/contracts/token_bridge/src/: lib.rs
external_contracts/stellar/contracts/token_bridge/src/tests/: 01_foundation_tests.rs  02_bridge_operations_tests.rs  03_security_critical_tests.rs  04_advanced_scenarios_tests.rs  05_overflow_underflow_tests.rs  06_ttl_resurrection_tests.rs  mod.rs
external_contracts/stellar/contracts/token_bridge/src/tests_archive/: integration_test.rs  security_test.rs  security_test_high.rs  test.rs
rust/: Cargo.toml
rust/main/config/: agent-config-testnet.json
rust/sealevel/: Cargo.toml
rust/sealevel/.hyperlane/chains/: metadata.yaml
rust/sealevel/client/: Cargo.toml
rust/sealevel/client/src/: igp.rs  multisig_ism.rs
rust/sealevel/environments/testnet/: gas-oracle-configs.json
rust/sealevel/libraries/access-control/: Cargo.toml
rust/sealevel/libraries/account-utils/: Cargo.toml
rust/sealevel/libraries/ecdsa-signature/: Cargo.toml
rust/sealevel/libraries/hyperlane-application/: Cargo.toml
rust/sealevel/libraries/hyperlane-core/: Cargo.toml
rust/sealevel/libraries/hyperlane-sealevel-connection-client/: Cargo.toml
rust/sealevel/libraries/hyperlane-sealevel-token/: Cargo.toml
rust/sealevel/libraries/hyperlane-warp-route/: Cargo.toml
rust/sealevel/libraries/interchain-security-module-interface/: Cargo.toml
rust/sealevel/libraries/message-recipient-interface/: Cargo.toml
rust/sealevel/libraries/multisig-ism/: Cargo.toml
rust/sealevel/libraries/serializable-account-meta/: Cargo.toml
rust/sealevel/libraries/test-transaction-utils/: Cargo.toml
rust/sealevel/libraries/test-utils/: Cargo.toml
rust/sealevel/main/hyperlane-core/: Cargo.toml
rust/sealevel/programs/helloworld/: Cargo.toml
rust/sealevel/programs/hyperlane-sealevel-igp/: Cargo.toml
rust/sealevel/programs/hyperlane-sealevel-igp-test/: Cargo.toml
rust/sealevel/programs/hyperlane-sealevel-token/: Cargo.toml
rust/sealevel/programs/hyperlane-sealevel-token-collateral/: Cargo.toml
rust/sealevel/programs/hyperlane-sealevel-token-cross-collateral/: Cargo.toml
rust/sealevel/programs/hyperlane-sealevel-token-native/: Cargo.toml
rust/sealevel/programs/mailbox/: Cargo.toml
rust/sealevel/programs/mailbox-test/: Cargo.toml
rust/sealevel/programs/test-send-receiver/: Cargo.toml
rust/sealevel/programs/validator-announce/: Cargo.toml
rust/sealevel/token-metadata/: usdc.json
scripts/: .gitignore  README.md  enroll-solana-testnet.ts  estimate-testnet-fees.ts  output.md  package.json  test-pruv-to-solana.ts  tsconfig.json  verify-solana-programs.sh
scripts/scripts-rwa/: .env.example  README.md  output.md  package.json
scripts/scripts-rwa/src/: args.ts  config.ts  flow-logger.ts  main.ts  relay-listener.ts  types.ts
scripts/scripts-usdt/: .env.example
scripts/scripts-usdt/src/: flow-logger.ts
scripts/src/: config.ts  helpers.ts  main.ts  types.ts
solidity/contracts/hooks/: SenderWhitelistHook.sol
solidity/contracts/interfaces/: IRouterFeeCollector.sol
test_scripts/: quick-start.sh  setup-solana-bridge.sh  solana-fund.sh  start-agents.sh  stop-agents.sh  test-bridge-curl.sh  test-bridge.sh  test-solana-status.sh
typescript/cli/.hyperlane/latest_deployments/: warp-route-deployment-config.yaml
typescript/cli/examples/: core-config.yaml
typescript/cli/src/verify/: warp.ts
typescript/sdk/src/: index.ts
typescript/sdk/src/block-explorer/: utils.ts
typescript/sdk/src/deploy/: HyperlaneDeployer.ts
typescript/sdk/src/metadata/: chainMetadataTypes.ts
(+72 files in other folders)
