
[package]
name = "hyperlane-application"
documentation = "https://docs.hyperlane.xyz"
edition = "2021"
homepage = "https://hyperlane.xyz"
license-file = "../LICENSE.md"
publish = false
version = "2.2.0"

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.serde_json]
version = "1.0"

[dependencies.strum]
version = "0.26.2"
