
[package]
name = "hyperlane-core"
documentation = "https://docs.hyperlane.xyz"
edition = "2021"
homepage = "https://hyperlane.xyz"
license-file = "../LICENSE.md"
publish = false
version = "2.2.0"

[features]
default = [ "strum",]
float = []
test-utils = [ "dep:config",]
agent = [ "strum",]
strum = [ "dep:strum",]
solana = [ "dep:solana-sdk",]
async = [ "tokio", "futures",]
matching-list = [ "dep:regex",]

[dependencies.async-trait]
version = "0.1"

[dependencies.async-rwlock]
version = "1.3"

[dependencies.auto_impl]
version = "1.0"

[dependencies.bigdecimal]
version = "0.4.2"

[dependencies.borsh]
version = "1.5"
features = [ "derive",]

[dependencies.bs58]
version = "0.5.0"

[dependencies.bech32]
version = "0.11.0"

[dependencies.bytes]
version = "1"
features = [ "serde",]

[dependencies.config]
version = "0.13.3"
optional = true

[dependencies.convert_case]
version = "0.6"

[dependencies.derive-new]
version = "0.5"

[dependencies.derive_more]
version = "0.99"

[dependencies.eyre]
version = "=0.6.8"

[dependencies.fixed-hash]
version = "0.8.0"

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.getrandom]
version = "0.2"
features = [ "js",]

[dependencies.hex]
version = "0.4.3"

[dependencies.regex]
version = "1.5"
optional = true

[dependencies.itertools]
version = "*"

[dependencies.num]
version = "0.4"
features = [ "serde",]

[dependencies.num-derive]
version = "0.4.0"

[dependencies.num-traits]
version = "0.2"

[dependencies.prometheus]
version = "0.13"
default-features = false

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.serde_json]
version = "1.0"

[dependencies.sha3]
version = "0.10"

[dependencies.strum]
version = "0.26.2"
optional = true
features = [ "derive",]

[dependencies.strum_macros]
version = "0.26.2"
optional = true

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1.42.0"
features = [ "rt", "time",]
optional = true

[dependencies.tracing]
version = "0.1"

[dependencies.typetag]
version = "0.2"

[dependencies.primitive-types]
version = "=0.12.1"
optional = true

[dependencies.solana-sdk]
version = "3.0"
optional = true

[dependencies.tiny-keccak]
version = "2.0.2"
features = [ "keccak",]

[dependencies.uint]
version = "0.9.5"

[dependencies.uuid]
version = "=1.11.0"
features = [ "v4", "serde",]

[dependencies.hyperlane-application]
path = "../hyperlane-application"

[dev-dependencies.tokio]
version = "1.42.0"
features = [ "rt", "time",]
